<resources>
    <string name="app_name">Memories</string>
    <string name="add_new_memory">add new memory</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="no_memories_available_yet">No memories.</string>
    <string name="at">\@</string>
    <string name="comma">,</string>
</resources>